fix header width on big screen  and width experience on small screen

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -26,6 +26,11 @@
     display: flex;
     flex-direction: column;
     padding-top: 40px;
+    align-items: center; 
+  }
+  .child {
+    max-width: 100%;
+
   }
 }
 
