--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   background-color: #ff725c;
   padding: 5rem 6rem 5rem 6rem;
-  max-width: 1400px;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 320px) {
